fix: make assembler glass model Java 8 compatible